crates/lutum/tests/ui/hook_def_singleton_last.stderr
error: #[hooks] slot definitions must not declare `last: Option<Return>`
 --> tests/ui/hook_def_singleton_last.rs:4:40
  |
4 |     async fn select_label(label: &str, last: Option<String>) -> String {
  |                                        ^^^^
